tests/snapshots/run_wpt_conformance__litert_reduceMean_float16_1D_tensor_all_positive_integers_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float16 1D tensor all positive integers default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceMean { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMeanInput: f16[24];
  }

  nodes {
    [reduceMeanOutput] = reduceMean(reduceMeanInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
